<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.example.shubham.paschat.sendNotification">

    <EditText
        android:id="@+id/notificationTitleEditText"
        android:layout_width="@dimen/userNameEditTextWidth"
        android:layout_height="@dimen/userNameEditTextHeight"
        android:layout_marginTop="20dp"
        android:hint="@string/notificationTitleHint" />

    <EditText
        android:id="@+id/notificationBodyEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/userNameEditTextHeight"
        android:inputType="textLongMessage"
        android:layout_below="@id/notificationTitleEditText"
        android:layout_marginTop="20dp"
        android:hint="@string/notificationBodyHint" />

    <Button
        android:id="@+id/uploadNotificationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/sendNotificationBtnLabel" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_below="@id/notificationBodyEditText"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notificationTypeSpinner"
            android:textSize="@dimen/notificationTypeText"/>

        <Spinner
            android:id="@+id/notificationType"
            android:layout_width="@dimen/notificationTypeSpinnerWidth"
            android:layout_height="@dimen/notificationTypeSpinnerHeight"
            android:layout_marginLeft="@dimen/imageTextSeperatorBtn"
            android:layout_marginStart="@dimen/imageTextSeperatorBtn"/>
    </LinearLayout>



</RelativeLayout>
